Add sold out badge for items with quantity 0 and disable add to cart button

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -6,10 +6,18 @@
       <span><%= humanized_money_with_symbol product.price %></span>
     </h1>
   <% end%>
-  <div>
-    <%= button_to add_item_cart_path(product_id: product.id), class: 'btn' ,
-    method: :post do %>
-      <%= fa_icon "shopping-cart", text: 'Add' %> 
+  <div style="<%= 'justify-content: space-between' if product.quantity == 0 %>">
+    <% if product.quantity == 0 %>
+    <div>
+      <button class="soldout">Sold Out</button>
+    </div>
     <% end %>
+    <div>
+      <%= button_to add_item_cart_path(product_id: product.id), class: 'btn' ,
+      disabled: product.quantity == 0 ? true : false,
+      method: :post do %>
+        <%= fa_icon "shopping-cart", text: 'Add' %> 
+      <% end %>
+    </div>
   </div>
 </article>
