--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,14 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<header class="page-header">
+  <h1>Admin &raquo; Dashboard</h1>
+</header>
+<table class="table table-success table-striped-columns">
+  <tr>
+    <th>Number of Categories</th>
+    <th>Number of Products</th>
+  </tr>
+  <tr>
+    <td><%= @category_count %></td>
+    <td><%= @product_count%></td>
+  </tr>
+</table>
+<p>View <%= link_to "Products", [:admin, :products] %></p>
