--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,4 +1,5 @@
 <header class="page-header">
   <h1>About Us</h1>
 </header>
+<p>ayyyy where&#39;s the gabagool</p>
 <img src="https://i.imgur.com/d0tjTJP.jpeg">
