Render admin category list without need of partial

--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -9,7 +9,11 @@
   </div>
 
   <ul>
-    <%= render @categories %>
+    <% @categories.each do |category| %>
+      <li>
+        <%= link_to category.name, category %>
+      </li>
+    <% end %>
   </ul>
 
 </section>
