--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -43,6 +43,7 @@
         </li> %>
       </ul>
       <ul class="navbar-nav">
+
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-danger"
@@ -63,10 +64,28 @@
             <%= link_to "About", [:about, :index], class: "nav-link" %>
           </li>
         </li>
+
+        <% if current_user %>
+          <li>
+            Signed in as <%= current_user.name %>
+          </li>
+          <li>
+            <%= link_to "Logout", '/logout', class: "nav-link" %>
+          </li>
+        <% else %>
+          <li>
+            <%= link_to 'Login', '/login', class: "nav-link" %>
+          </li>
+          <li>
+            <%= link_to 'Signup', '/signup', class: "nav-link" %>
+          </li>
+        <% end %>
+
         <li class="nav-item end-0">
-          <%= link_to cart_path, class: "nav-link " do %> <%= fa_icon "shopping-cart" %>
+          <%= link_to cart_path, class: "nav-link" do %> <%= fa_icon "shopping-cart" %>
           My Cart (<%= cart.size %>) <% end %>
         </li>
+
       </ul>
     </div>
   </div>
