--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -66,7 +66,7 @@
         </li>
 
         <% if current_user %>
-          <li>
+          <li class="nav-link">
             Signed in as <%= current_user.name %>
           </li>
           <li>
