--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,5 +1,15 @@
 <header class="page-header">
   <h1>About Us</h1>
 </header>
-<p>ayyyy where&#39;s the gabagool</p>
-<img src="https://i.imgur.com/d0tjTJP.jpeg">
+<div class="intro">
+  <p>
+    Looking for a way to add some life to your home? Look no further than our online plant shop! We have a wide variety of beautiful plants and flowers, as well as all the accessories you need to keep them healthy and happy. Plus, our prices are unbeatable! So what are you waiting for?
+  </p>
+  <p>
+    At our online plant shop, we only sell the highest quality plants and flowers. We source our products from reputable growers and nurseries, so you can be sure you're getting a healthy, beautiful plant. Plus, ordering is quick and easy! We offer free shipping on all orders over $50, so it's easy to get the plants you want without breaking the bank.
+  </p>
+  <p>
+    We have a wide variety of plants and flowers available for purchase on our website. Whether you're looking for something small and delicate or big and bold, we have the perfect plant for you. We also carry a selection of accessories, including potting soil, pots and containers, watering cans, and more.
+  </p>
+</div>
+<img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/plant-guide-1663941701.jpg" style="width: 100%; margin-top: 3rem">
